--- a/frontend/src/app/create-sales-day/create-sales-day.component.html
+++ b/frontend/src/app/create-sales-day/create-sales-day.component.html
@@ -13,14 +13,24 @@
         
         <br>
         <h4>Name:
-            <input placeholder="(optional)" type="text">
+            <input #txtName placeholder="(optional)" type="text">
         </h4>
         <h4>Datum:
-            <input  type="datetime-local" id="Test_DatetimeLocal">
+            <mat-form-field>
+                <mat-label>Choose a date</mat-label>
+                <input matInput [matDatepicker]="picker"
+                (dateInput)="addEvent('input', $event)">
+                <mat-hint>MM/DD/YYYY</mat-hint>
+                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
+
         </h4>
 
         <h4>
-            <button (click)="createSalesDayClicked()" class="btn btn-primary">Verkaufstag anlegen</button>
+            <button (click)="createSalesDayClicked(txtName.value)" class="btn btn-primary">Verkaufstag anlegen</button>
         </h4>
    
 </body>
+
+
