--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -1,3 +1,4 @@
+<body style="margin-left: 10px;">
 <h1>Verkaufstag:  {{dataService.salesDayName()}}</h1>
 <h5>am {{dataService.salesDayDateString().substring(0,15)}}</h5>
 
@@ -12,7 +13,7 @@
             Ochse 2
         </td> -->
 
-        <td> Ox</td>
+        <td> Oxe</td>
         <td>
             <button class="btn btn-success" (click)="addNameField($event.target)">
                 +
@@ -48,3 +49,4 @@
       </tr>
     </tbody>
   </table>
+</body>
