--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,7 +11,7 @@
         <a (click)="homeClicked()" class="nav-link" >Home</a>
       </li>
       <li  class="nav-item" >
-        <a   class="nav-link" (click)="newSalesDayClick()">Neuer Verkaufstag</a>
+        <a   class="nav-link" (click)="salesDaysOverviewClick()">Verkaufstage</a>
       </li>
       <li class="nav-item">
         <a class="nav-link"  >Kunden</a>
