bootstrap card for salesDay

--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -1,6 +1,6 @@
 <body style="margin-left: 10px;">
-<h1>Verkaufstag:  {{dataService.salesDayName()}}</h1>
-<h5>am {{dataService.salesDayDateString().substring(0,15)}}</h5>
+<h1>Verkaufstag:  {{dataService.selectedSalesDay().name}}</h1>
+<h5>am {{dataService.selectedSalesDayFormattedDate()}}</h5>
 
 
 
