--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <img src="https://www.innviertler-gauchos.at/wp-content/uploads/sites/16/2020/03/Innviertler-Gauchos-Aichet-Angus-Logo-Kopf_02-1.png" alt="your image" width="50" height="40" class="d-inline-block align-top">
 
@@ -14,7 +15,7 @@
         <a   class="nav-link" (click)="salesDaysOverviewClick()">Verkaufstage</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  >Kunden</a>
+        <a class="nav-link" (click)="customersClicked()"  >Kunden</a>
       </li>
      
     </ul>
