input field of edit Customer changed

--- a/frontend/src/app/customers/customers.component.html
+++ b/frontend/src/app/customers/customers.component.html
@@ -12,12 +12,27 @@
       <tr *ngFor="let customer of dataService.customers()">
         <th scope="row">{{customer.id}}</th>
         <td>
-          <input *ngIf="editingCustomer === customer" #nameInput type="text" [value]="customer.name" (input)="customer.name = nameInput.value">
-          <span *ngIf="editingCustomer !== customer">{{customer.name}}</span>
+          <form>
+            <div class="form-group">
+              <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"> -->
+
+              <input class="form-control" placeholder="Name" *ngIf="editingCustomer === customer" #nameInput type="text" [value]="customer.name" (input)="customer.name = nameInput.value">
+              <span *ngIf="editingCustomer !== customer">{{customer.name}}</span>
+              </div>
+          </form>
+       
         </td>
         <td>
-          <input *ngIf="editingCustomer === customer" #addressInput type="text" [value]="customer.address" (input)="customer.address = addressInput.value">
-          <span *ngIf="editingCustomer !== customer">{{customer.address}}</span>
+          <form>
+            <div class="form-group">
+              <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"> -->
+
+              <input class="form-control" placeholder="Addresse" *ngIf="editingCustomer === customer" #addressInput type="text" [value]="customer.address" (input)="customer.address = addressInput.value">
+              <span *ngIf="editingCustomer !== customer">{{customer.address}}</span>
+              </div>
+          </form>
+
+        
         </td>
         <td>
           <button *ngIf="editingCustomer === customer" class="btn btn-success btn-sm" (click)="saveChanges(customer)">Speichern</button>
