--- a/frontend/src/app/customers/customers.component.html
+++ b/frontend/src/app/customers/customers.component.html
@@ -1,5 +1,6 @@
 <table class="table table-hover">
     <thead>
+    
       <tr>
         <th scope="col">ID</th>
         <th scope="col">Name</th>
@@ -7,8 +8,24 @@
         <th scope="col"></th>
         <th scope="col"></th>
       </tr>
+      
     </thead>
     <tbody>
+
+      <tr>
+        <td></td> <!-- ID wird vom Server generiert -->
+        <td>
+          <input class="form-control" placeholder="Name" #newName type="text">
+        </td>
+        <td>
+          <input class="form-control" placeholder="Addresse" #newAddress type="text">
+        </td>
+        <td>
+          <button class="btn btn-success" (click)="createCustomerFromInput(newName.value, newAddress.value)">Hinzufügen</button>
+        </td>
+        <td></td>
+      </tr>
+
       <tr *ngFor="let customer of dataService.customers()">
         <th scope="row">{{customer.id}}</th>
         <td>
