adding Order started

--- a/frontend/src/app/welcome-page/welcome-page.component.scss
+++ b/frontend/src/app/welcome-page/welcome-page.component.scss
@@ -3,7 +3,7 @@
    
     width: 100%;
     height: 100%;
-    background-color: darkgrey;
+    background-color: #2E294E;
     
     // background-image: url('https://img.freepik.com/free-vector/abstract-minimal-white-background_23-2148887988.jpg?w=1060&t=st=1703333894~exp=1703334494~hmac=15f68c3ce86ae1f129e08e4148d966eaec36058ed117495411fdd35e1383862f');
     color: white;
