--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -1,6 +1,6 @@
 <body style="margin-left: 10px;">
 <h1>Verkaufstag:  {{dataService.selectedSalesDay.value.name}}</h1>
-<h5>am {{ dataService.getSalesDayDate(dataService.selectedSalesDay.value) }}</h5>
+<h5>{{ dataService.getSalesDayDate(dataService.selectedSalesDay.value) }}</h5>
 
 
 <table class="table-secondary">
@@ -23,9 +23,9 @@
 
 <div style="display: flex;">
     <label for="selectPerson">Kunde</label>
-    <select style="width: 20%;" class="form-select" (selectionchange)="customerChanged()"> 
-        <option *ngFor="let customer of dataService.customers()" >
-            {{customer.name}}
+    <select  style="width: 20%;" class="form-select" [(ngModel)]="selectedCustomerId" (selectionchange)="customerChanged()"> 
+        <option *ngFor="let customer of dataService.customers()" [value]="customer.id" >
+            {{customer.name}} 
         </option>
         
 
@@ -70,7 +70,7 @@
         <th scope="col">Kategorie</th>
         <th scope="col">Menge (kg)</th>
         <th scope="col">Anmerkung</th>
-        <th scope="col">test</th>
+        <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
@@ -80,8 +80,9 @@
                 <div dropdown  class="d-inline-block">
 
                     <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown button
+                        <button #selectedMeatPiece class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                          {{selectedMeatPiece.name ? selectedMeatPiece : 'Auswählen'}}
+
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                         <li *ngFor="let category of dataService.categories()" class="dropdown-submenu" (click)="$event.stopPropagation()">
@@ -90,8 +91,8 @@
                             <li *ngFor="let subcategory of selectedCategory?.subCategories" class="dropdown-submenu" (click)="$event.stopPropagation()">
                                 <a class="dropdown-item" (click)="onSubCategorySelected(subcategory)">{{subcategory.name}}</a>
                                 <ul [class.show]="selectedSubCategory === subcategory" class="dropdown-menu dropdown-submenu">
-                                <li *ngFor="let meatpiece of selectedSubCategory?.meatPieces" (click)="$event.stopPropagation()">
-                                    <a class="dropdown-item">{{meatpiece.name}}</a>
+                                <li *ngFor="let meatpiece of selectedSubCategory?.meatPieces"  >
+                                    <a class="dropdown-item" (click)="onMeatPieceSelected(meatpiece)">{{meatpiece.name}}</a>
                                 </li>
                                 </ul>
                             </li>
@@ -100,6 +101,17 @@
                         </ul>
                     </div>
                 </div>
+            </td>
+
+            <td>
+                <input type="number" class="form-control" id="quantity" placeholder="0.0">
+            </td>
+            <td>
+              <textarea id="notes" class="form-control" rows="1" style="height: 36px; overflow-y: hidden;" oninput="this.style.height = 'auto'; this.style.height = (this.scrollHeight) + 'px';" [(ngModel)]="notes"></textarea>
+              <td>
+              <button  class="btn btn-success" (click)="addOrder()">
+                +
+              </button>
             </td>
       </tr>
     </tbody>
