--- a/frontend/src/app/sales-day/sales-day.component.scss
+++ b/frontend/src/app/sales-day/sales-day.component.scss
@@ -3,16 +3,28 @@
     margin: 0;
     padding: 0;
 }
+#category-button, #notes {
+    height: 10px; // Setzen Sie die Höhe auf den gewünschten Wert
+}
+
+#quantity{
+    width: 5em;
+}
 
 .dropdown-submenu {
     position: relative;
 }
 
 .dropdown-submenu .dropdown-menu {
+    position: absolute;
     top: 0;
     left: 100%;
     margin-top: -1px;
     margin-left: -1px;
-    margin: 0;
-    padding: 0;
+    
+}
+
+li.dropdown-menu{
+    padding: 0!important;
+    margin: 0 !important;
 }
