Teilstücke component hinzugefügt

--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -1,119 +1,7 @@
 <body style="margin-left: 10px;">
-<h1>Verkaufstag:  {{dataService.selectedSalesDay.value.name}}</h1>
-<h5>{{ dataService.getSalesDayDate(dataService.selectedSalesDay.value) }}</h5>
-
-
-<table class="table-secondary">
-        <tr>
-        <!-- <td>
-            Ochse 1 
-        </td>
-        <td>
-            Ochse 2
-        </td> -->
-
-        <td> Oxe</td>
-        <td>
-            <button class="btn btn-success" (click)="addNameField($event.target)">
-                +
-            </button>
-        </td>
-    </tr>
-</table>
-
-<div style="display: flex;">
-    <label for="selectPerson">Kunde</label>
-    <select  style="width: 20%;" class="form-select" [(ngModel)]="selectedCustomerId" (selectionchange)="customerChanged()"> 
-        <option *ngFor="let customer of dataService.customers()" [value]="customer.id" >
-            {{customer.name}} 
-        </option>
-        
-
-    </select>
-    
-</div>
-
-
-
-<!-- <div dropdown  class="d-inline-block">
-
-  <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Dropdown button
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li *ngFor="let category of dataService.categories()" class="dropdown-submenu" (click)="$event.stopPropagation()">
-        <a class="dropdown-item" (click)="onCategorySelected(category)">{{category.name}}</a>
-        <ul [class.show]="selectedCategory === category" class="dropdown-menu dropdown-submenu">
-          <li *ngFor="let subcategory of selectedCategory?.subCategories" class="dropdown-submenu" (click)="$event.stopPropagation()">
-            <a class="dropdown-item" (click)="onSubCategorySelected(subcategory)">{{subcategory.name}}</a>
-            <ul [class.show]="selectedSubCategory === subcategory" class="dropdown-menu dropdown-submenu">
-              <li *ngFor="let meatpiece of selectedSubCategory?.meatPieces" (click)="$event.stopPropagation()">
-                <a class="dropdown-item">{{meatpiece.name}}</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-
-
-  </div> -->
+  <!--Kunden-->
+  <app-verkaufstag-kunde></app-verkaufstag-kunde>
   
-
-
-<table class="table table-hover">
-      <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Kategorie</th>
-        <th scope="col">Menge (kg)</th>
-        <th scope="col">Anmerkung</th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr >
-            <td>abc</td>
-            <td>
-                <div dropdown  class="d-inline-block">
-
-                    <div class="dropdown">
-                        <button #selectedMeatPiece class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                          {{selectedMeatPiece.name ? selectedMeatPiece : 'Auswählen'}}
-
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li *ngFor="let category of dataService.categories()" class="dropdown-submenu" (click)="$event.stopPropagation()">
-                            <a class="dropdown-item" (click)="onCategorySelected(category)">{{category.name}}</a>
-                            <ul [class.show]="selectedCategory === category" class="dropdown-menu dropdown-submenu">
-                            <li *ngFor="let subcategory of selectedCategory?.subCategories" class="dropdown-submenu" (click)="$event.stopPropagation()">
-                                <a class="dropdown-item" (click)="onSubCategorySelected(subcategory)">{{subcategory.name}}</a>
-                                <ul [class.show]="selectedSubCategory === subcategory" class="dropdown-menu dropdown-submenu">
-                                <li *ngFor="let meatpiece of selectedSubCategory?.meatPieces"  >
-                                    <a class="dropdown-item" (click)="onMeatPieceSelected(meatpiece)">{{meatpiece.name}}</a>
-                                </li>
-                                </ul>
-                            </li>
-                            </ul>
-                        </li>
-                        </ul>
-                    </div>
-                </div>
-            </td>
-
-            <td>
-                <input type="number" class="form-control" id="quantity" placeholder="0.0">
-            </td>
-            <td>
-              <textarea id="notes" class="form-control" rows="1" style="height: 36px; overflow-y: hidden;" oninput="this.style.height = 'auto'; this.style.height = (this.scrollHeight) + 'px';" [(ngModel)]="notes"></textarea>
-              <td>
-              <button  class="btn btn-success" (click)="addOrder()">
-                +
-              </button>
-            </td>
-      </tr>
-    </tbody>
-  </table>
+  <!--Teilstücke-->
+  <app-teilstucke></app-teilstucke>
 </body>
