--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,27 +1,47 @@
+<div class="container">
+  <div class="sidebar">
+    <!-- Your existing div with specific styles -->
+    <div style="width: 100%; height: 911.3px; padding-top: 140px; padding-left: 30px; 
+    padding-right: 46px; background: #060606; flex-direction: column; justify-content: 
+    flex-start; align-items: flex-start; gap: 60px; display: inline-flex; color: white; position: relative;">
+      <!-- Content of the sidebar -->
+      <a style="font-size: 20px;" (click)="handleNavLinkClick('innviertlerGauchos')" [class.active-link]="activeLink === 'innviertlerGauchos'" class="nav-link" href="#">
+        Innviertler Gauchos
+      </a>
 
-
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light" >
-  <img src="https://www.innviertler-gauchos.at/wp-content/uploads/sites/16/2020/03/Innviertler-Gauchos-Aichet-Angus-Logo-Kopf_02-1.png" alt="your image" width="50" height="40" class="d-inline-block align-top">
-
-  <a class="navbar-brand" href="#">Innviertler Gauchos</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a (click)="homeClicked()" class="nav-link" >Home</a>
-      </li>
-      <li  class="nav-item" >
-        <a   class="nav-link" (click)="salesDaysOverviewClick()">Verkaufstage</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" (click)="customersClicked()"  >Kunden</a>
-      </li>
-     
-    </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" (click)="handleNavLinkClick('dashboard')"
+            [class.active-link]="activeLink === 'dashboard'">
+            <mat-icon>dashboard</mat-icon>
+            Dashboard
+          </a>
+        </li>
+        <li class="nav-item">
+          <a (click)="handleNavLinkClick('home')" [class.active-link]="activeLink === 'home'" class="nav-link">
+            <mat-icon>home</mat-icon>
+            Home
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="handleNavLinkClick('salesDays')"
+            [class.active-link]="activeLink === 'salesDays'">
+            <mat-icon>calendar_today</mat-icon>
+            Verkaufstage
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="handleNavLinkClick('customers')"
+            [class.active-link]="activeLink === 'customers'">
+            <mat-icon>person</mat-icon>
+            Kunden
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
-</nav>
-
-<router-outlet>
+  <div class="main-content">
+    <!-- This is where the router outlet will be placed -->
+    <router-outlet></router-outlet>
+  </div>
+</div>
