--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -104,7 +104,7 @@
             </td>
 
             <td>
-                <input type="number" class="form-control" id="quantity" placeholder="0.0">
+                <input [(ngModel)]="quantity" type="number" class="form-control" id="quantity" placeholder="0.0">
             </td>
             <td>
               <textarea id="notes" class="form-control" rows="1" style="height: 36px; overflow-y: hidden;" oninput="this.style.height = 'auto'; this.style.height = (this.scrollHeight) + 'px';" [(ngModel)]="notes"></textarea>
@@ -119,7 +119,7 @@
     
           <td>{{order.id}}</td>
           <td>{{dataService.getMeatPieceFromID(order.meatPieceId!)?.name}}</td>
-        <td>megne</td>
+        <td>{{order.amount}}</td>
         <td>  {{order.notes}}</td>
         
       </tr>
