--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -81,7 +81,7 @@
 
                     <div class="dropdown">
                         <button #selectedMeatPiece class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                          {{selectedMeatPiece.name ? selectedMeatPiece : 'Auswählen'}}
+                          {{selectedMeatPiece.name ? selectedMeatPiece.name : 'Auswählen'}}
 
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
