--- a/frontend/src/app/stock-overview/stock-overview.component.html
+++ b/frontend/src/app/stock-overview/stock-overview.component.html
@@ -1,29 +1,21 @@
-<!-- meat-inventory.component.html -->
-<div class="meat-inventory">
-    <h2>Fleischbestand</h2>
-    <div *ngFor="let category of dataService.categories()">
-      <h3>{{ category.name }}</h3>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Bestand</th>
-            <th>Umwandeln</th>
-            <!-- Weitere Spalten nach Bedarf -->
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let subcategory of category.subCategories">
-            <td>{{ subcategory.name }}</td>
-            <td> eooo </td>
-            <td>
-              <button (click)="(subcategory)">Umwandeln</button>
-              <!-- Oder ein Dropdown-Menü, je nach Bedarf -->
-            </td>
-            <!-- Weitere Spalten nach Bedarf -->
-          </tr>
-        </tbody>
-      </table>
-    </div>
+<div style="margin-bottom: 30px;" class="row row-cols-1 row-cols-md-6 g-6">
+    <!-- <div  class="col">
+        <div class="card h-100">
+          <img src="https://img.freepik.com/free-vector/abstract-minimal-white-background_23-2148887988.jpg?w=1060&t=st=1703333894~exp=1703334494~hmac=15f68c3ce86ae1f129e08e4148d966eaec36058ed117495411fdd35e1383862f" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Neuer Verkaufstag</h5>
+            <p class="card-text">Hiermit wird ein neuer Verkaufstag erstellt</p>
+            <a  class="btn btn-secondary">Verkaufstag anlegen</a>
+      
+          </div>
+        </div>
+      </div> -->
+      <app-single-category-info   *ngFor="let category of dataService.categories()" [category]="category" (click)="categoryClicked(category)">
+             
+               
+      </app-single-category-info>
+
+   
   </div>
-  
+
+
