update design & export function

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,11 +1,12 @@
-<div class="container">
+<div class="conOverview">
   <div class="sidebar">
     <!-- Your existing div with specific styles -->
-    <div style="width: 100%; height: 911.3px; padding-top: 140px; padding-left: 30px; 
+    <div style="padding-top: 140px; padding-left: 30px; 
     padding-right: 46px; background: #060606; flex-direction: column; justify-content: 
     flex-start; align-items: flex-start; gap: 60px; display: inline-flex; color: white; position: relative;">
       <!-- Content of the sidebar -->
-      <a style="font-size: 20px;" (click)="handleNavLinkClick('innviertlerGauchos')" [class.active-link]="activeLink === 'innviertlerGauchos'" class="nav-link" href="#">
+      <a style="font-size: 20px;" (click)="handleNavLinkClick('innviertlerGauchos')"
+        [class.active-link]="activeLink === 'innviertlerGauchos'" class="nav-link" href="#">
         Innviertler Gauchos
       </a>
 
