--- a/frontend/src/app/welcome-page/welcome-page.component.html
+++ b/frontend/src/app/welcome-page/welcome-page.component.html
@@ -1,4 +1,4 @@
-<body class="container">
+<body class="containerColor">
     <div class="content">
         <h1 id="typewriterWelcome"></h1>
     </div>
