--- a/frontend/src/app/stock-overview/sub-category-info/sub-category-info.component.html
+++ b/frontend/src/app/stock-overview/sub-category-info/sub-category-info.component.html
@@ -49,7 +49,7 @@
         ></button>
       </div>
       <div class="modal-body">
-        Wie viel {{ dataService.selectedSubCategory().name }} möchtest du hinzufügen?
+        Wie viel (kg) {{ dataService.selectedSubCategory().name }} möchtest du hinzufügen?
         <input
           [(ngModel)]="stockInput"
           type="number"
